# asmg_workflow

./: README.md  asmg_workflow.html  index.html  pyproject.toml  search.js
asmg_workflow/: __init__.py  logs.html  logs.py  tasks.html  tasks.py  utils.html  utils.py  workflows.html  workflows.py
docs/: asmg_workflow.html  index.html
docs/asmg_workflow/: logs.html
documentation/asmg_workflow/: workflows.html
examples/: Start_test_workflow_1_log_20250510_001.yaml  Start_test_workflow_1_log_20250510_002.yaml  cubic_log_20250510_001.yaml  linear_log_20250510_001.yaml  square_log_20250510_001.yaml  test_workflow_1_log_20250510_001.yaml  workflow_tasks_example.ipynb
